--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -25,7 +25,7 @@
 				text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. The measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
 				padding: dp(0), dp(30)
 
-			Label:
+			WrapLabel:
 				size_hint_x:0.8
 				id:label2
 				text_size: root.width*self.size_hint_x, None
@@ -36,6 +36,7 @@
 				size_hint_x:0.8
 				# size_hint_x:0.5
 				pos_hint:{'center_x':0.5}
+				padding: dp(0), dp(30)
 
 		MyButton3:
 			text:"Begin"
