--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -113,7 +113,7 @@
         orientation: 'vertical'
 
         MyActionBar:
-            title:physical_toolbar_title
+            title:depression_toolbar_title
 
         BoxLayout:
             orientation:'vertical'
