--- a/layout_files/EducationalResourcesPage.kv
+++ b/layout_files/EducationalResourcesPage.kv
@@ -1,22 +1,29 @@
 #:set xxx 368
 #:set yyy 286
 
-#:set txt1 "[b]Air Pollution[/b]\nAir pollution is now suspected to play a significant role in the development of Alzheimer’s disease.[sup]2[/sup] You can reduce your exposure to air pollution by wearing a protective face mask when going outdoors.[sup]3[/sup]\n\n"
+#:set txt1 "[size=22sp][b]Air Pollution[/b][/size]\nAir pollution is now suspected to play a significant role in the development of Alzheimer’s disease.[sup]2[/sup] You can reduce your exposure to air pollution by wearing a protective face mask when going outdoors.[sup]3[/sup]\n\n"
 
-#:set txt2 "[b]Rural-Urban[/b]\nRisk for Alzheimer’s disease is higher in rural than in urban areas.[sup]4[/sup] This disparity may be due to health care inaccessibility or lifestyle factors.[sup]5,6[/sup] If you live in a rural area, you can reduce your risk for Alzheimer’s by engaging in some of the lifestyle behaviors promoted in this program.[sup]6[/sup]\n\n"
-#:set txt3 "[b]Diet[/b]\nAlzheimer’s risk may decrease with adoption of a Mediterranean diet, which is measured by the DASH-Q, and includes regular consumption of fish, olive oil, nuts, fruits, vegetables, especially leafy greens, and whole grains.[sup]7[/sup]\n\n"
-#:set txt4 "[b]Physical Activity[/b]\nResearch shows that >150 minutes of moderate physical activity (PA) or > 75 minutes of vigorous PA per week may decrease the risk for Alzheimer’s disease.[sup]2[/sup]\n\n"
-#:set txt5 "[b]Alcohol Misuse[/b]\nUnhealthy consumption of alcohol, as defined in the screening score interpretation, may increase your risk for Alzheimer’s disease.[sup]4[/sup] Moderate alcohol use, which is not associated with Alzheimer’s, is defined as 1 drink per day for women (and men over 65) and 2 drinks per day for men.\n\n"
-#:set txt6 "[b]Depression[/b]\nDepression, defined as having little interest in doing things and feeling down/hopeless more often than not in a 2-week period, is linked to increased risk of Alzheimer’s disease.[sup]6[/sup] However, research has shown that deep and mindful breathing can reduce self-reported depression symptoms.[sup]7[/sup]\n\n"
-#:set txt7 "[b]Age[/b]\nAge is the greatest risk factor for Alzheimer’s disease. One’s risk for Alzheimer’s disease doubles every 5 years after age 65.[sup]2[/sup] However, cognitive decline can be modified by healthy behaviors.\n\n"
-#:set txt8 "[b]Sex[/b]\nFemales are at greater risk for Alzheimer’s than males, potentially because females live longer on average.[sup]3[/sup] However, cognitive decline can be modified by behavior.\n\n"
-#:set txt9 "[b]Hypertension[/b]\nHigh blood pressure, especially in midlife, is associated with at least an 18% increase in the risk for Alzheimer’s.[sup]4[/sup] The recommendations about diet and exercise in this program may decrease blood pressure,[sup]5[/sup] and thus Alzheimer’s risk.\n\n"
-#:set txt10 "[b]Traumatic Brain Injury[/b]\nResearch shows that even mild TBI can increase one’s risk for the onset of Alzheimer’s.[sup]2[/sup] However, individuals with TBI may be able to improve cognitive function with cognitive rehabilitation therapy (CRT),[sup]3[/sup] in general, and the memory training device called “Operation N-Back,” in particular.[sup]4[/sup]\n\n"
+#:set txt2 "[size=22sp][b]Rural-Urban[/b][/size]\nRisk for Alzheimer’s disease is higher in rural than in urban areas.[sup]4[/sup] This disparity may be due to health care inaccessibility or lifestyle factors.[sup]5,6[/sup] If you live in a rural area, you can reduce your risk for Alzheimer’s by engaging in some of the lifestyle behaviors promoted in this program.[sup]6[/sup]\n\n"
+#:set txt3 "[size=22sp][b]Diet[/b][/size]\nAlzheimer’s risk may decrease with adoption of a Mediterranean diet, which is measured by the DASH-Q, and includes regular consumption of fish, olive oil, nuts, fruits, vegetables, especially leafy greens, and whole grains.[sup]7[/sup]\n\n"
+#:set txt4 "[size=22sp][b]Physical Activity[/b][/size]\nResearch shows that >150 minutes of moderate physical activity (PA) or > 75 minutes of vigorous PA per week may decrease the risk for Alzheimer’s disease.[sup]2[/sup]\n\n"
+#:set txt5 "[size=22sp][b]Alcohol Misuse[/b][/size]\nUnhealthy consumption of alcohol, as defined in the screening score interpretation, may increase your risk for Alzheimer’s disease.[sup]4[/sup] Moderate alcohol use, which is not associated with Alzheimer’s, is defined as 1 drink per day for women (and men over 65) and 2 drinks per day for men.\n\n"
+#:set txt6 "[size=22sp][b]Depression[/b][/size]\nDepression, defined as having little interest in doing things and feeling down/hopeless more often than not in a 2-week period, is linked to increased risk of Alzheimer’s disease.[sup]6[/sup] However, research has shown that deep and mindful breathing can reduce self-reported depression symptoms.[sup]7[/sup]\n\n"
+#:set txt7 "[size=22sp][b]Age[/b][/size]\nAge is the greatest risk factor for Alzheimer’s disease. One’s risk for Alzheimer’s disease doubles every 5 years after age 65.[sup]2[/sup] However, cognitive decline can be modified by healthy behaviors.\n\n"
+#:set txt8 "[size=22sp][b]Sex[/b][/size]\nFemales are at greater risk for Alzheimer’s than males, potentially because females live longer on average.[sup]3[/sup] However, cognitive decline can be modified by behavior.\n\n"
+#:set txt9 "[size=22sp][b]Hypertension[/b][/size]\nHigh blood pressure, especially in midlife, is associated with at least an 18% increase in the risk for Alzheimer’s.[sup]4[/sup] The recommendations about diet and exercise in this program may decrease blood pressure,[sup]5[/sup] and thus Alzheimer’s risk.\n\n"
+#:set txt10 "[size=22sp][b]Traumatic Brain Injury[/b][/size]\nResearch shows that even mild TBI can increase one’s risk for the onset of Alzheimer’s.[sup]2[/sup] However, individuals with TBI may be able to improve cognitive function with cognitive rehabilitation therapy (CRT),[sup]3[/sup] in general, and the memory training device called “Operation N-Back,” in particular.[sup]4[/sup]\n\n"
 
 # #:set txt11 "[b]Cognitive Decline[/b]\n “Alzheimer’s disease is a progressive neurologic disease that results in the irreversible loss of neurons, particularly in the ... (memory and reasoning areas of the brain). The clinical hallmarks are progressive impairment in memory, judgment, decision making, orientation to physical surroundings, and language.” [sup]5[/sup] However, you may be able reduce your risk for Alzheimer’s by modifying some of the behaviors described in this program.\n\n"
 #:set txt11 "[b]Cognitive Decline[/b]\n “Alzheimer’s disease is a progressive neurologic disease that results in the irreversible loss of neurons, particularly in the  .\n\n"
 
-#:set txt_refs "[b]References[/b]\n[size=14]1. Thomas RE, et al. Effect of enhanced feedback ... trial. The Lancet. 2006;367(9527):1990-1996.\n\n2. Snowden TM, et al. Does mild ... analysis. J Alzheimers Dis. 2020;78(2):757-775.\n\n3. Cicerone KD, et al. Evidence-based ... through 2008. Arch Phys Med Rehabil. 2011;92(4):519-530.\n\n4. Tacchino A, et al. A new app for ... sclerosis. JMIR Mhealth Uhealth. 2015;3(3):e85.\n\n5. Nussbaum RL, Ellis CE. Alzheimer’s ... disease. NEJM. 2003;348:1356-1364.[/size]"
+#:set txt_refs "[size=22sp][b]References[/b][/size]\n[size=10sp]1. Thomas RE, et al. Effect of enhanced feedback ... trial. The Lancet. 2006;367(9527):1990-1996.\n\n2. Snowden TM, et al. Does mild ... analysis. J Alzheimers Dis. 2020;78(2):757-775.\n\n3. Cicerone KD, et al. Evidence-based ... through 2008. Arch Phys Med Rehabil. 2011;92(4):519-530.\n\n4. Tacchino A, et al. A new app for ... sclerosis. JMIR Mhealth Uhealth. 2015;3(3):e85.\n\n5. Nussbaum RL, Ellis CE. Alzheimer’s ... disease. NEJM. 2003;348:1356-1364.[/size]"
+
+# 1. Thomas RE, et al. Effect of enhanced feedback ... trial. The Lancet. 2006;367(9527):1990-1996.
+# 2. Peters R, et al. Air pollution ... review. J Alzheimers Dis. 2019;70(1):145-163.
+# 3. Pacitto A, et al. Effectiveness of ... PM exposure. Sci Total Environ. 2019;650:1582-1590.
+# 4. Beydoun MA, et al. Nationwide inpatient prevalence ... 2012. J Alzheimers Dis. 2015;48(2):361-375. 5. Rahman M, et al. Assess of ... dementia. JAMA Netw Open. 2020;3(10):2022111
+# 6. Blocker EM, et al. Promoting Alzheimer’s ... intervention. Kans J Med. 2020;13:179-185. 7. Petersson SD, et al. Mediterranean diet ... evidence. Adv Nutr. 2016;7(5):889-904.
+
 <EducationalResourcesPage>:
 	BoxLayout:
 		orientation: 'vertical'
@@ -38,18 +45,35 @@
 		# 	# 		size: (xx,yy)
 
 		ScrollView:
+			id:SV
 			scroll_type: ['bars','content']
+
+			on_motion: root.motion(None,self)
+			on_touch_move: root.touch_move(None,self)
 			# scroll_wheel_distance: 20
-			bar_width: 7
+			bar_width: 10
 			do_scroll_x: False
 			do_scroll_y: True
 			bar_inactive_color: .55, .55, .55, 1
 			# bar_color: .663, .663, .663, 1
 			bar_inactive_color: ALT_TXT_COLOR[0], ALT_TXT_COLOR[1], ALT_TXT_COLOR[2], 0.5
 			bar_color: ALT_TXT_COLOR
+			# canvas.before:
+			# 	Color:
+			# 		rgba:(0, 1, 0, 0.25)
+			# 	Rectangle:
+			# 		size: self.size
+			# 		pos: self.pos
 
 			WrapLabel:
-				text:txt1+txt2+txt3+txt4+txt5+txt6+txt7+txt8+txt9+txt10+txt_refs
+				size_hint_x:1
+				text:txt7+txt8+txt2+txt1+txt3+txt4+txt5+txt6+txt9+txt10+txt_refs
 				color: TXT_COLOR
 				padding: dp(30), dp(30)
 				markup: True
+				# canvas.before:
+				# 	Color:
+				# 		rgba:(1, 1, 0, 0.25)
+				# 	Rectangle:
+				# 		size: self.size
+				# 		pos: self.pos
