--- a/layout_files/RiskAssesment.kv
+++ b/layout_files/RiskAssesment.kv
@@ -20,7 +20,7 @@
 					orientation:'vertical'
 					Label:
 						# text: "Your Score:\n[size=10sp][color=#fcba03](higher is better)[/color][/size]"
-						text: "\nYour Score:"
+						text: "\nScore:"
 						halign: 'center'
 						# font_size:'14sp'
 						font_size: self.height*0.5
