--- a/layout_files/RiskAssesment.kv
+++ b/layout_files/RiskAssesment.kv
@@ -115,7 +115,7 @@
 					id:SociodemographicPage_Sex_label
 					text: 'Demographics [size=8sp]' + SEC_TEXT +'[/size]'
 					on_release:
-						root.manager.current="SociodemographicPage"
+						root.manager.current="SociodemographicPage_Age"
 						root.manager.transition.direction="left"
 
 
