--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -43,7 +43,6 @@
 
 <DepressionPage>:
 
-
     BoxLayout:
         orientation: 'vertical'
         MyActionBar:
@@ -51,6 +50,7 @@
 
         BoxLayout:
             orientation: 'vertical'
+            size_hint_y:0.5
             Label:
                 id:label1
                 text_size: root.width*self.size_hint_x, None
@@ -59,7 +59,7 @@
                 text:depression_Q_main
                 halign:'center'
                 pos_hint:{'center_x':0.5}
-                size_hint_y:0.5
+                # size_hint_y:0.5
 
             # BoxLayout:
             Label:
@@ -72,7 +72,7 @@
                 text: ""
                 halign:'center'
                 pos_hint:{'center_x':0.5,'center_y':0.3}
-                size_hint_y:0.5
+                # size_hint_y:0.5
 
 
         BoxLayout:
