--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -7,10 +7,8 @@
 #:set alcohol_toolbar_title    'Alcohol Usage'
 
 <AlcoholLandingPage>:
-
 	BoxLayout:
 		orientation: 'vertical'
-
 		MyActionBar:
 			title:alcohol_toolbar_title
 
@@ -18,22 +16,17 @@
 			text: alcohol_landing_blurb
 			padding: dp(0), dp(30)
 			halign:'center'
-
 		Widget:
 			size_hint_y:0.2
 
 		WrapLabel:
-			# font_size:'2xw0sp'
 			text: alcohol_landing_subtitle
 			color: TXT_COLOR
-			# text_color:DARK_BLUE
 			theme_text_color:"Hint"
 			halign: 'center'
 			size_hint_x:0.8
 			color: TXT_COLOR
-			# size_hint_x:0.5
 			pos_hint:{'center_x':0.5}
-
 		Widget:
 			size_hint_y:0.2
 
@@ -42,8 +35,7 @@
 			on_release: root.arrow_right()
 			size_hint_y:0.25
 
-
-		NavButtons:
+		NavButtons
 
 <AlcoholUsagePage>:
 	BoxLayout:
@@ -52,14 +44,12 @@
 			title:alcohol_toolbar_title
 
 		BoxLayout:
-
 			orientation:'vertical'
 			size_hint_y:0.6
 			pos_hint:{'center_x':0.5}
 
 			Label:
 				size_hint_x:0.8
-				# size_hint_y:0.6
 				id:q_label
 				text_size: root.width*self.size_hint_x, None
 				color: TXT_COLOR
@@ -72,101 +62,50 @@
 			orientation:'vertical'
 			MyButton2:
 				text:'Never'
-				on_release:
-					root.button_press(7)
-			Label:
-				text:''
+				on_release: root.button_press(7)
+			Widget:
 				size_hint_y:0.05
 			MyButton2:
 				id:button6
-				# icon:'numeric-6'
 				text:'Less than monthly'
-				# halign:'left'
-				# size_hint_x:0.8
-				# font_style:'Button'
-				# # size_hint_y:0.8
-				# pos_hint:{'center_x':0.5}
 				on_release: root.button_press(6)
-				# custom_color: 0, 1, 0, 1
-			Label:
-				text:''
+			Widget:
 				size_hint_y:0.05
 			MyButton2:
 				id:button5
-				# icon:'numeric-5'
 				text:'Monthly'
-				# halign:'left'
-				# size_hint_x:0.8
-				# font_style:'Button'
-				# # size_hint_y:0.8
-				# pos_hint:{'center_x':0.5}
 				on_release: root.button_press(5)
-			Label:
-				text:''
+			Widget:
 				size_hint_y:0.05
 			MyButton2:
 				id:button4
-				# icon:'numeric-4'
 				text:'Weekly'
-				# halign:'left'
-				# size_hint_x:0.8
-				# font_style:'Button'
-				# pos_hint:{'center_x':0.5}
 				on_release: root.button_press(4)
-			Label:
-				text:''
+			Widget:
 				size_hint_y:0.05
 			MyButton2:
 				id:button3
-				# icon:'numeric-3'
 				text:'2 - 3 times a week'
-				# halign:'left'
-				# size_hint_x:0.8
-				# font_style:'Button'
-				# pos_hint:{'center_x':0.5}
 				on_release: root.button_press(3)
-			Label:
-				text:''
+			Widget:
 				size_hint_y:0.05
 			MyButton2:
 				id:button2
-				# icon:'numeric-2'
 				text:'4 - 6 times a week'
-				# halign:'left'
-				# size_hint_x:0.8
-				# font_style:'Button'
-				# pos_hint:{'center_x':0.5}
 				on_release: root.button_press(2)
-			Label:
-				text:''
+			Widget:
 				size_hint_y:0.05
 			MyButton2:
 				id:button1
-				# icon:'numeric-1'
 				text:'Daily'
-				# halign:'left'
-				# size_hint_x:0.8
-				# font_style:'Button'
-				# pos_hint:{'center_x':0.5}
 				on_release: root.button_press(1)
 
 		NavButtons
-
-	FloatLayout:
-		orientation: 'vertical'
-		Label:
-			pos:(50,950)
-			text: ''
-			# md_bg_color:0,0,1,0.05
-			size_hint_y:0.15
-			size_hint_x:0.9
-			text_color:1,1,1,1
 
 <AlcoholScorePage>:
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
-
 		MyActionBar:
 			title:alcohol_toolbar_title
 
@@ -197,8 +136,7 @@
 			MyButton2:
 				text:'Next'
 				on_release:root.arrow_right()
-
 			Widget:
 				size_hint_y:0.2
 
-		NavButtons:
+		NavButtons
