--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -1,4 +1,3 @@
-
 #:set diet_Q0 'How many days in the past 7 days did you:'
 #:set diet_Q1 'Eat nuts or peanut butter'
 #:set diet_Q2 'Eat beans, peas, or lentils'
@@ -16,65 +15,44 @@
 #:set diet_landing_blurb    'Alzheimer’s risk may decrease with adoption of a Mediterranean diet, which is measured by the DASH-Q, and includes regular consumption of fish, olive oil, nuts, fruits, vegetables, especially leafy greens, and whole grains'
 #:set diet_landing_subtitle 'Answer the following questions about your diet'
 
-
 #:set size_x 564
 #:set size_y 305
 
 #:set size_x_subtitle 733
 #:set size_y_subtitle 132
 
-
 <DietLandingPage>:
-
 	BoxLayout:
 		orientation: 'vertical'
 		MyActionBar:
 			title:diet_toolbar_title
-
-		# Widget:
-		# 	size_hint_y:0.3
 		WrapLabel:
 			text: diet_landing_blurb
 			padding: dp(0), dp(30)
-
 		Widget:
 			size_hint_y:0.2
-
 		WrapLabel:
-			# font_size:'2xw0sp'
 			text: diet_landing_subtitle
-			# text_color:DARK_BLUE
 			color: TXT_COLOR
 			theme_text_color:"Hint"
 			halign: 'center'
 			size_hint_x:0.8
-			# size_hint_x:0.5
 			pos_hint:{'center_x':0.5}
-
 		Widget:
 			size_hint_y:0.2
-
 		MyButton3:
 			text:"Begin"
-			# font_style:'Button'
-			# # size_hint_x:0.7
-			# pos_hint:{'center_x':0.5}
 			on_release:root.arrow_right()
-
 
 		NavButtons
 
-
 <DietAndFoodPage>:
-
 	BoxLayout:
 		orientation: 'vertical'
 		MyActionBar:
 			title:diet_toolbar_title
 
-
 		BoxLayout:
-
 			orientation:'vertical'
 			size_hint_y:0.6
 			pos_hint:{'center_x':0.5}
@@ -89,10 +67,8 @@
 				halign:'center'
 				pos_hint:{'center_x':0.5}
 
-			# BoxLayout:
 			Label:
 				size_hint_x:0.8
-				# size_hint_y:0.6
 				id:q_label
 				text_size: root.width*self.size_hint_x, None
 				color: TXT_COLOR
@@ -101,17 +77,12 @@
 				halign:'center'
 				pos_hint:{'center_x':0.5,'center_y':0.3}
 
-
 		GridLayout:
 			cols:3
-			# rows:4
-
 			on_parent:
 				for i in range(0,8): txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.button_press, background_color= BTN_COLOR, font_style='Button'))
 
 		NavButtons
-
-
 
 <Template>:
 	Label:
@@ -158,7 +129,6 @@
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
-
 		MyActionBar:
 			title:air_toolbar_title
 
@@ -169,14 +139,12 @@
 				color: TXT_COLOR
 				halign: 'center'
 				font_size:'16sp'
-
 			Label:
 				id:score_label
 				text: ''
 				color: TXT_COLOR
 				halign: 'center'
 				font_size:'34sp'
-
 			MyButton2:
 				text:'Try Again'
 			Widget:
@@ -189,8 +157,7 @@
 			MyButton2:
 				text:'Next'
 				on_release:root.arrow_right()
-
 			Widget:
 				size_hint_y:0.2
 
-		NavButtons:
+		NavButtons
