--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -2,9 +2,7 @@
 
 <LocationPage>:
 	BoxLayout:
-
 		orientation:'vertical'
-
 		MyActionBar:
 			title:L_toolbar_title
 
@@ -17,14 +15,10 @@
 			padding: dp(0), dp(30)
 			halign:"center"
 
-		# Widget:
-		# 	size_hint_y:0.2
 		BoxLayout:
 			orientation:'horizontal'
 			size_hint_x:1
 			pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-			# ScrollView:
-				# id:listt
 			BoxLayout:
 				orientation: 'vertical'
 				MyButton2:
@@ -32,9 +26,6 @@
 					name:"B1"
 					selected:True
 					text:"Urban[size=10sp][color=#fcba03]\n>49,999 residents[/color][/size]"
-					# background_normal: ''
-				    # background_color: if (selected==True): 1,1,0,1 else: BTN_COLOR
-
 					on_release: root.toggle(self)
 
 				MyButton2:
@@ -42,10 +33,6 @@
 					name:"B2"
 					selected:False
 					text:'Large Rural\n[size=10sp][color=#fcba03]10,000 – 49,999 residents[/color][/size]'
-					# secondary_text:''
-					# secondary_font_style:'Caption'
-					# halign:'cent'
-					# markup:True
 					on_release: root.toggle(self)
 
 				MyButton2:
@@ -53,9 +40,6 @@
 					name:"B3"
 					selected:False
 					text:"Small Rural\n[size=10sp][color=#fcba03]2,500 – 9,999 residents[/color][/size]"
-					# secondary_text:'2,500 – 9,999 residents'
-					# secondary_font_style:'Caption'
-					# halign:'left'
 					on_release: root.toggle(self)
 
 				MyButton2:
@@ -63,9 +47,6 @@
 					name:"B4"
 					selected:False
 					text:"Isolated\n[size=10sp][color=#fcba03]<2,500 residents[/color][/size]"
-					# secondary_text:'<2,500 residents'
-					# secondary_font_style:'Caption'
-					# halign:'left'
 					on_release: root.toggle(self)
 
 		NavButtons
@@ -76,7 +57,6 @@
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
-
 		MyActionBar:
 			title:L_toolbar_title
 
@@ -87,14 +67,12 @@
 				color: TXT_COLOR
 				halign: 'center'
 				font_size:'16sp'
-
 			Label:
 				id:score_label
 				text: ''
 				color: TXT_COLOR
 				halign: 'center'
 				font_size:'34sp'
-
 			MyButton2:
 				text:'Try Again'
 			Widget:
@@ -107,9 +85,7 @@
 			MyButton2:
 				text:'Next'
 				on_release:root.arrow_right()
-
 			Widget:
 				size_hint_y:0.2
 
-		NavButtons:
-
+		NavButtons
