--- a/layout_files/RiskAssesment.kv
+++ b/layout_files/RiskAssesment.kv
@@ -44,6 +44,8 @@
 					pos_hint:{'center_x': 0.5, 'center_y': 0.5}
 					font_style:'Button'
 					size_hint_x:1
+					background_color: BTN_COLOR
+					on_release: root.reset()
 
 		Label:
 			text:''
